--- a/exercises/code-skeleton/index.html
+++ b/exercises/code-skeleton/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <h1>Hello World!</h1>
-        <p>-Lamar Hawkins</p>
-    
+        <p>
+            -Lamar Hawkins
+        </p>
     </body>
 </html>
