--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -5,44 +5,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Music Playlist</title>
     </head>
-    <body>
-        <p>
         <img
             src="images/Michael Jackson.jpg"
             width="200"
             alt="Michael Jackson album cover"
         >
-        <ul><h4>
+    <ul>
             <li> <i>The Way You Make Me Feel</i> Michael Jackson 6:44</li>
-            <li> <i>Dirty Diana</i> Michael Jackson 5:06
-            <li> <i>Man In The Mirror</i> Michael Jackson 5:04
-        </p>
-    </body>
-
-    <body>
-        <p>
+            <li> <i>Dirty Diana</i> Michael Jackson 5:06</li>
+            <li> <i>Man In The Mirror</i> Michael Jackson 5:04</li>
+    </ul>
         <img
             src="images/Brian McKnight.jpg"
             width="175"
             alt="Brian McKnight Back At One Album Cover"
         >
-        <h4>
-        <li><i>Back At One</i>Brian McKnight 3:54
-        <li><i>Stay</i> Brian McKnight 4:24
-        <li><i>Can You Read My Mind</i> Brian McKnight 3:54
-        </p>
-    </body>
-    <body>
-        <p>
+    <ul>
+            <li><i>Back At One</i> Brian McKnight 3:54</li>
+            <li><i>Stay</i> Brian McKnight 4:24</li>
+            <li><i>Can You Read My Mind</i> Brian McKnight 3:54</li>
+    </ul>
         <img
             src="images/2pac.jpg"
             width="175"
             alt="2pac album photo"
         >
-        <h4>
-        <li><i>Dear Mama</i> 2Pac 4:36
-        <li><i>Old School</i> 2Pac 4:40
-        <li><i>So Many Tears</i> 2Pac 3:59
-          
-        </body>
+    <ul>
+        <li><i>Dear Mama</i> 2Pac 4:36</li>
+        <li><i>Old School</i> 2Pac 4:40</li>
+        <li><i>So Many Tears</i> 2Pac 3:59</li>
+    </ul>
 </html>
