--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -11,14 +11,14 @@
         <h2 id="palette-1-heading">Color Palettes</h2>
         <div id="palette-1-color-1">
             <h3>Tommy Green</h3>
-            <h4>lightgreen</h4>
+            <h4>ffd700</h4>
         </div>
         <div id="palette-color-2">
-            <h3>Top Blue</h3>
+            <h3>Top Red</h3>
             <h4>4E8098</h4>
         </div>
         <div id="palette-color-3">
-            <h3>LightSeaGreen</h3>
+            <h3>Bold Black</h3>
             <h4>00A9A5</h4>
         </div>
     </body>
