containers-selectors-drill

--- a/demos/10-combining-selector/index.html
+++ b/demos/10-combining-selector/index.html
@@ -3,10 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Combining CSS Selectors Demo</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div id="navbar">
+            <a href="#">HOME</a>
+            <a href="#">About</a>
+            <a href="#" class="warning">Contact</a>
+        </div>
+        <p>  
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos<a href="#">dolorum</a>quisquam doloribus obcaecati eum
+            iusto modi<a href="#">repellat</a> nostrum necessitatibus voluptate
+            perspiciatis illum, ea animi aut eligendi 
+            molestias<a href="#">voluptatem</a> a ratione.
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Dignissimos<a href="#">dolorum</a>quisquam doloribus obcaecati eum
+            iusto modi<a href="#">repellat</a> nostrum necessitatibus voluptate
+            perspiciatis illum, ea animi aut eligendi 
+            molestias<a href="#">voluptatem</a> a ratione.
+        </p>
     </body>
 </html>
