--- a/exercises/product-showcase-site/index.html
+++ b/exercises/product-showcase-site/index.html
@@ -7,27 +7,40 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="single-column">
+        <div class="single-column1">
         <h1>Jordan 1</h1>
-        <p>
-
-
-
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Tempore id, nisi quis similique aperiam, minima doloremque
+            asperiores voluptatum quisquam nam at neque doloribus
+            animi iure obcaecati molestias! Sunt, ducimus quod!
         </p>
         <img 
             src="images/jordan 1.jpg"
             width="300px"
             alt="jordan1"
         img>
-        <div class="single-column">
-        <h1>Jordan2</h1>
+
+        <div class="single-column2">
+        <h1>Jordan 2</h1>
+        <p> 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Tempore id, nisi quis similique aperiam, minima doloremque
+            asperiores voluptatum quisquam nam at neque doloribus
+            animi iure obcaecati molestias! Sunt, ducimus quod!
+        </p>
         <img
             src="images/jordan 2.jpg"
             width="300px"
             alt="jordan2"
         img>
-        <div class="single-column">
+        <div class="single-column3">
         <h1>Jordan3</h1>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Tempore id, nisi quis similique aperiam, minima doloremque
+        asperiores voluptatum quisquam nam at neque doloribus
+        animi iure obcaecati molestias! Sunt, ducimus quod!
+        </p>
         <img
             src="images/jordan 3.jpg"
             width="300px"
