--- a/exercises/product-showcase-site/index.html
+++ b/exercises/product-showcase-site/index.html
@@ -7,45 +7,42 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="single-column1">
-        <h1>Jordan 1</h1>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Tempore id, nisi quis similique aperiam, minima doloremque
-            asperiores voluptatum quisquam nam at neque doloribus
-            animi iure obcaecati molestias! Sunt, ducimus quod!
+    <div class="first-row">
+        <h1>Air Jordan 13 Retro</h1>
+        <p> 
+           <h2><b>Dont Miss Out On Hot Deals</b></h2>
+           <h3><b>See More</b></h3>
         </p>
         <img 
             src="images/jordan 1.jpg"
             width="300px"
             alt="jordan1"
         img>
+    </div>
 
-        <div class="single-column2">
-        <h1>Jordan 2</h1>
+    <div class="second-column">
+        <h1>Air Jordan 11</h1>
         <p> 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Tempore id, nisi quis similique aperiam, minima doloremque
-            asperiores voluptatum quisquam nam at neque doloribus
-            animi iure obcaecati molestias! Sunt, ducimus quod!
+           <h2><b>Shop With Us Online</b></h2>
+           <h3><b>See More</b></h3>
         </p>
         <img
             src="images/jordan 2.jpg"
             width="300px"
             alt="jordan2"
         img>
-        <div class="single-column3">
-        <h1>Jordan3</h1>
+    </div>
+        <div class="third-block">
+        <h1>Air Jordan 4 Retro</h1>
         <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Tempore id, nisi quis similique aperiam, minima doloremque
-        asperiores voluptatum quisquam nam at neque doloribus
-        animi iure obcaecati molestias! Sunt, ducimus quod!
+           <h2><b>Shoes On Sale 10% OFF</b></h2>
+           <h3><b>See More</b></h3>
         </p>
         <img
             src="images/jordan 3.jpg"
             width="300px"
             alt="jordan3"
         img>
-         
+    </div>
     </body>
 </html>
