flex box drills

--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -6,12 +6,22 @@
         <title><Wiki-With-Sidebar></Wiki-With-Sidebar></title>
         <link href="css/style.css" rel="stylesheet">
     </head>
-    <body>
-         <h1><b>Superman</b></h1>
-         <p>
+    <body><div id="two-columns">
+        <div id="sidebar-content">
+            <h2>BRAND NAME</h2>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+                <li><a href="#">Link 4</a></li>
+            </ul>
+        </div>
+        <div id="main-content">
+            <h1>Superman</h1
+        
             This article is about the superhero.
-            For other uses, see <i>Superman (disambiguation).</i>
-        </p>
+            For other uses, see Superman (disambiguation)
+        
         <p>
         <img
             src="images/superman.jpg"
