themed-gallery-page

--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -3,27 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></themed-gallery-page></title>
+        <title>themed-gallery-page</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>Art Gallery Page</h1>
-            <h3>Abstract Art Gallery(grid)</h3>
-        <div class="basic-grid-gallery">
-            <img src="images/abstract art folder/abstract 1.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 2.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 3.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 4.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 5.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 6.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 7.jpg" alt="art">
-            <img src="images/abstract art folder/abstrcat 8.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 9.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 10.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 11.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 12.jpg" alt="art">
-            <img src="images/abstract art folder/abstract 13.jpg" alt="art">
-
+            <h1>Abstract Art</h1>
+            <h3>Gallery</h3>
+            <div class="cropped-grid-gallery">
+                <img src="images/Abstract Art 1/art 1.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 2.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 3.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 4.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 5.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 6.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 7.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 8.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 9.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 10.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 11.jpg" alt="tea">
+                <img src="images/Abstract Art 1/art 12.jpg" alt="tea">
+            </div>
+        </div>
     </body>
 </html>
