--- a/exercises/client-navbars/index3.html
+++ b/exercises/client-navbars/index3.html
@@ -9,12 +9,12 @@
     <body>
         <div id="header">
             <div id="navbar-top"> 
-                
+                 
                 <div class="content-column">
                     <b><p>Sculptor's Haven</p></b>
                     <a href="#">Gallery</a>
                     <a href="#">Contact</a>
-                    <a href="index3.html">Go To Page 1</a>
+                    <a href="index.html">Go To Page 1</a>
                 </div>
             </div>
         </div>
