--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -9,9 +9,19 @@
         <body>
             <div id="navbar">
                 <a id="logo" href="#">AdoptMePlz</a>
+                <div class="dropdown-container">
                 <a href="#">Adopt</a>
+                <div class="dropdown-menu">
+                    <a href="#">dede</a>
+                    <a href="#">powwow</a>
+                    <a href="#">bradford</a>
+                     
+                </div>
+            </div>
                 <a href="#">Volunteer</a>
                 <a href="#">Donate</a>
+            </div>
+            <div id="hero">
             </div>
         </div>
     </body>
