Dropdown Menu Site

--- a/projects/dropdown-menu-site/dede.html
+++ b/projects/dropdown-menu-site/dede.html
@@ -23,6 +23,14 @@
                 <a href="#">Donate</a>
             </div>
             <div id="hero">
+                <div class="center-column">
+                    <h2>DeDe</h2>
+                    <img src="images/light brown dog.jpg">
+                    <p>
+                      <b><br>Strong Energetic</br> can be a guardian
+                         at times but likes 
+                      to play and have fun around the house.</b>
+                    </p>
     
         </div>
     </body>
