--- a/projects/Restaurant/index.html
+++ b/projects/Restaurant/index.html
@@ -7,6 +7,9 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <div id="hero">
+            <h1><b><i>Palette & Plate Gallery</i></b></h1>
+        </div>
         <div id="header">
             <div id="navbar">
                 <a href="#" id="logo">
@@ -17,20 +20,15 @@
                 <a href="#">Events</a>
                 <a href="#">About</a>
                 <a href="#">contact</a>
+                <a href="index 2.html">Go To Page 2</a>
             </div>        
         </div>
         <div id="two-columns">
-              <div id="sidebar-content">
-                <a href="#"class="cta-button">view menu
-                <h1>Fine Food & Drinks</h1>
-            <img src="images/Rolls.png" alt="dinner rolls">
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Saepe nostrum, neque hic eos, eum ipsum eius natus iure
-                ullam maxime totam sit aspernatur vitae recusandae soluta
-                laborum magnam ducimus ad?
-            </p>
-            <img src="images/Sandwhich.png" alt="special Sandwhich">
+            <h1><i>Palette & Plate Gallery<hr></i></h1>
+        <div class="cropped-grid-gallery">
+           <img src="images/dinner table.jpg">
+           <img src="images/dinner table 1.jpg">
+           <img src="images/dinner table 2.jpg">
         </div>
     
         <div id="footer">
