--- a/projects/Restaurant/index 2.html
+++ b/projects/Restaurant/index 2.html
@@ -25,11 +25,29 @@
                 <a href="#" class="cta-button">Breakfast Menu</a>
                 <div class="cropped-grid-gallery">
             <img src="images/french toast bananas & blueberries.jpg">
+            <p>
+                This is our speacial French Toast with bananas & blueberries
+            </p>
             <img src="images/stacked pancakes.jpg">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            </p>
             <img src="images/waffles.jpg">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
             <img src="images/Syrup pancakes.jpg">
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
             <img src="images/Eggs&Toast.jpg">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
             <img src="images/cinnamon rolls.jpg">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
         </div>
     
         <div id="footer">
