--- a/projects/Restaurant/index 2.html
+++ b/projects/Restaurant/index 2.html
@@ -18,36 +18,18 @@
                 <a href="#">About</a>
                 <a href="#">contact</a>
                 <a href="index.html">Go To page 1</a>
-            </div>        
-        </div>
+            </div> 
         <div id="two-columns">
                 <h1>Palette & Plate Gallery</h1>
                 <a href="#" class="cta-button">Breakfast Menu</a>
                 <div class="cropped-grid-gallery">
-            <img src="images/french toast bananas & blueberries.jpg">
-            <p>
-                This is our speacial French Toast with bananas & blueberries
-            </p>
-            <img src="images/stacked pancakes.jpg">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            </p>
-            <img src="images/waffles.jpg">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <img src="images/Syrup pancakes.jpg">
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            </p>
-            <img src="images/Eggs&Toast.jpg">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <img src="images/cinnamon rolls.jpg">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
+                    <img src="images/brocolli eggs & bacon.jpg" alt="">
+                    <img src="images/cinnamon rolls.jpg" alt="">
+                    <img src="images/Eggs&Toast.jpg" alt="">
+                    <img src="images/french toast bananas & blueberries.jpg" alt="">
+                    <img src="images/stacked pancakes.jpg" alt="">
+                    <img src="images/Syrup pancakes.jpg" alt=>
+         
         </div>
     
         <div id="footer">
