--- a/projects/Restaurant/index.html
+++ b/projects/Restaurant/index.html
@@ -24,11 +24,20 @@
             </div>        
         </div>
         <div id="two-columns">
-            <h1><i>Palette & Plate Gallery<hr></i></h1>
-        <div class="cropped-grid-gallery">
+            <h1><i>Palette & Plate Gallery</i></h1>
+        <div class="basic-grid-gallery">
            <img src="images/dinner table.jpg">
            <img src="images/dinner table 1.jpg">
            <img src="images/dinner table 2.jpg">
+           <a href="#">Learn More</a>
+           <a href="#">Learn More</a>
+           <a href="#">Learn More</a>
+           <img src="images/landscape-restaurant.jpg">
+           <img src="images/landscape-restaurant2.jpg">
+           <img src="images/landscape-restaurant3.jpg">
+           <a href="#">Learn More</a>
+           <a href="#">Learn More</a>
+           <a href="#">Learn More</a>
         </div>
     
         <div id="footer">
