--- a/projects/Restaurant-Site/index.html
+++ b/projects/Restaurant-Site/index.html
@@ -10,22 +10,17 @@
         <div id="hero">
             <h1><b><i>Palette & Plate Gallery</i></b></h1>
         </div>
-        <div id="header">
-            <div id="navbar">
-                <a href="#" id="logo">
-                    <img src="images/Restaurant Logo.png" alt="first">
-                </a>
+            <div id="navbar"> 
+                <a href="#">Home</a>
                 <a href="#">Reservation</a>
-                <a href="#">Menu</a>
-            
+                <a href="index2.html">Menu</a>
                 <a href="#">Events</a>
                 <a href="#">About</a>
                 <a href="#">contact</a> 
-                <a href="index 2.html">Go To Page 2</a>
             </div>        
         </div>
         <div id="two-columns">
-            <h1><i>Palette & Plate Gallery</i></h1>
+            <h1><i>Palette & Plate Gallery Dine-In</i></h1>
         <div class="basic-grid-gallery">
            <img src="images/dinner table.jpg">
            <img src="images/dinner table 1.jpg">
@@ -40,20 +35,28 @@
            <a href="#">Learn More</a>
            <a href="#">Learn More</a>
         </div>
-    
         <div id="footer">
-            <div id="footer-columns-navbar">
-                <div>
+            <div id="footer-navbar">
+            <div>
+                <p>
                     <b><a href="#">Breakfast</a></b>
                     <p>Monday - Friday  7:00AM - 10:30AM</p>
                     <b><a href="#">Brunch</a></b>
-                    <p>Saturday + Sunday  8:30AM - 1:30PM</p>
+                    <p>Saturday - Sunday  8:30AM - 1:30PM</p>
                     <b><a href="#">Lunch</a></b>
                     <br>Monday - Friday  11:00AM - 2:00PM</br>
                     <br><b><a href="#">Dinner</a></b></br>
                      Sunday - Thursday  5PM - 9PM
-                    <br>Friday + Saturday  5PM - 11PM</br>
-                </div>
+                    <br>Friday - Saturday  5PM - 11PM</br>
+                    <br>Location
+                    1908 East Carson Street
+                    Pittsburgh, PA
+                    15203
+                    Empowered by Slice</br>
+                <br>© Copyright 2024 Palette & Plate Gallery Solutions, Inc.
+                </br>
+                    <br>Contact info (412) 213-6630</br>
+                </p>
             </div>
         </div>      
     </body>
