--- a/projects/Restaurant-Site/index2.html
+++ b/projects/Restaurant-Site/index2.html
@@ -8,42 +8,85 @@
     </head>
     <body>
         <div id="header">
+            <p>
+                <h1><b>Palette & Plate Gallery<b></h1>
+            </p>
             <div id="navbar">
-                <a href="#" id="logo">
-                    <img src="images/Restaurant Logo.png" alt="first">
-                </a>
+                <a href="index.html">Home</a>
                 <a href="#">Reservation</a>
-                <a href="#">Menu</a>
-                <a href="#">Events</a>
+                <a href="index.html">Menu</a>
+                <a href="#">Events</a> 
                 <a href="#">About</a>
                 <a href="#">contact</a>
-                <a href="index.html">Go To page 1</a>
             </div> 
-        <div id="two-columns">
-            <h1>Palette & Plate Gallery</h1>
-            <a href="#" class="cta-button">Breakfast Menu</a>
-            <div class="cropped-grid-gallery">
-                <img src="images/brocolli eggs & bacon.jpg" alt=""> 
-                <img src="images/cinnamon rolls.jpg" alt="">
-                <img src="images/Eggs&Toast.jpg" alt="">
-                <img src="images/french toast bananas & blueberries.jpg" alt="">
-                <img src="images/stacked pancakes.jpg" alt="">
-                <img src="images/Syrup pancakes.jpg" alt=>
+            <div id="centered-column">
+            <div class="card">
+                <img
+                src="images/french toast bananas & blueberries.jpg"
+            >
+            <h2>French Toast & Bananas</h2>
+            <p>
+                Three layers of french toast with bananas and blueberries in the 
+                middle.
+            </p>
+            <a href="#">Learn More</a>
         </div>
-    
+        <div class="card">
+            <img
+                src="images/Eggs&Toast.jpg"
+            >
+            <h2>Eggs & Toast & Veggies</h2>
+            <p>
+                Eggs & Toast fried light dippie egggwith some veggies on the
+                side with salt pepper.
+            </p>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="card">
+            <img
+                src="images/cinnamon rolls.jpg"
+            >
+            <h2>Cinnamon Rolls</h2>
+            <p>
+                Freshed baked cinnamon rolls with glazed icing on top.
+            </p>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="card">
+            <img
+                src="images/stacked pancakes.jpg"
+               
+            >
+            <h2>Stacked Pancakes</h2>
+            <p>
+                Homemade freshly cooked pancakes stacked by eight with 
+                syrup on top.
+            </p>
+            <a href="#">Learn More</a>
+        </div>
         <div id="footer">
-            <div id="footer-columns-navbar">
-                <div>
+            <div id="footer-navbar">
+            <div>
+                <p>
                     <b><a href="#">Breakfast</a></b>
                     <p>Monday - Friday  7:00AM - 10:30AM</p>
                     <b><a href="#">Brunch</a></b>
-                    <p>Saturday + Sunday  8:30AM - 1:30PM</p>
+                    <p>Saturday - Sunday  8:30AM - 1:30PM</p>
                     <b><a href="#">Lunch</a></b>
                     <br>Monday - Friday  11:00AM - 2:00PM</br>
                     <br><b><a href="#">Dinner</a></b></br>
-                     Sunday - Thursday  5PM - 9PM
-                    <br>Friday + Saturday  5PM - 11PM</br>
-                </div>
+                        Sunday - Thursday  5PM - 9PM
+                    <br>Friday - Saturday  5PM - 11PM</br>
+                    <br>Location
+                    1908 East Carson Street
+                    Pittsburgh, PA
+                    15203
+                    Empowered by Slice</br>
+                    <br>© Copyright 2024 Palette & 
+                    Plate Gallery Solutions, Inc.
+                    </br>
+                    <br>Contact info (412) 213-6630</br>
+                </p>
             </div>
         </div>      
     </body>
